--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">씨네마천국</string>
+
+    <string name="save">저 장</string>
+    <string name="cancel">취 소</string>
+    <string name="movie_name">영화이름</string>
+
+    <!--> Movie Write Act <-->
+    <string name="request_rating">평점을 입력해 주세요</string>
+    <string name="request_under_100ch">100자 이내로 작성해주세요.</string>
+    <!--> Movie Write Act <-->
 </resources>
