PJT3. 한줄평 목록 레이아웃 완성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="request_rating">평점을 입력해 주세요</string>
     <string name="request_under_100ch">100자 이내로 작성해주세요.</string>
     <!--> Movie Write Act <-->
+
+    <!--> Movie More Act <-->
+    <string name="participants_count">(000명 참여)</string>
+    <string name="star_rating_count">0.0</string>
+    <!--> Movie More Act <-->
 </resources>
