--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,21 @@
     <string name="save">저 장</string>
     <string name="cancel">취 소</string>
     <string name="movie_name">영화이름</string>
+    <string name="report">신고하기</string>
+    <string name="recommend">추천</string>
+    <string name="write">작성하기</string>
+    <string name="show_more">모두 보기</string>
+    <string name="reserve">예매하기</string>
 
     <!--> Movie Detail Act <-->
+    <string name="reservation_rate">예매율</string>
+    <string name="star_rate">평점</string>
+    <string name="accumulated_attendance">누적관객수</string>
+    <string name="plot">줄거리</string>
+    <string name="director_actress">감독/출연</string>
+    <string name="director">감독</string>
+    <string name="actress">출연</string>
+    <string name="review">한줄평</string>
     <string name="snack_bar_review_saved">리뷰작성이 완료되었습니다.</string>
     <string name="snack_bar_review_canceled">리뷰작성이 취소되었습니다.</string>
     <!--> Movie Detail Act <-->
