--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="user_settings">사용자 설정</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="content_needed">내용을 입력해 주세요.</string>
 
     <!--> Movie Detail Act <-->
     <string name="reservation_rate">예매율</string>
